Début correction rendu intermédiaire